packages/isar_generator/test/errors/class/variable.dart
// only classes

import 'package:isar-community/isar.dart';

// ignore: invalid_annotation_target
@collection
const t = 'hello';
